Exporta grafico de kaplan meier

--- a/notebooks/1.0-jrb-survival-analysis.ipynb
+++ b/notebooks/1.0-jrb-survival-analysis.ipynb
@@ -7,7 +7,38 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sksurv.nonparametric import kaplan_meier_estimator\n",
+    "\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings('ignore')\n",
+    "sns.set_style()\n",
+    "plt.rcParams['figure.figsize'] = (12, 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Análisis de Sobrevivencia\n",
+    "\n",
+    "En este cuadernillo se quiere realizar el análisis de sobrevivencia de pacientes con\n",
+    "trasplante cardiaco en el Instituto Nacional del Tórax. Para este efecto, se utilizará\n",
+    "la base de datos de GRD de pacientes que se hayan realizado un trasplante cardiaco. La base\n",
+    "sigue a pacientes entre 2011 hasta el 16/08/2023 del año 2022.\n",
+    "\n",
+    "Las respuestas que se quieren seguir son las siguientes:\n",
+    "\n",
+    "- Luego de 2 años del trasplante, ¿Cuál es la probabilidad de que el paciente siga vivo?\n",
+    "- Luego de 10 años del trasplante, ¿Cuál es la probabilidad de que el paciente siga vivo?\n",
+    "\n",
+    "Además, se quiere saber cómo es la curva de sobrevivencia para distintos rangos etarios de\n",
+    "pacientes."
    ]
   },
   {
@@ -16,34 +47,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(\"../data/raw/Trasplantes 2011-2022 16082023.xlsx\", sheet_name=\"bdgrd\")"
+    "df = pd.read_excel(\"../data/raw/Trasplantes 2011-2022 16082023.xlsx\", sheet_name=\"bdgrd\")\n",
+    "df[\"rango_etario\"] = pd.cut(df[\"Edad en años\"], bins=range(0, 121, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columnas_utiles = [\"1ra Intervención Fecha\", \"Fecha fallecimiento\", \"rango_etario\"]\n",
+    "fecha_corte = pd.to_datetime(\"16/08/2023\", dayfirst=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['rut', 'dv', 'Fecha Nacimiento', 'Edad en años',\n",
-       "       'Prevision ( Cod+Desc )', 'Servicio Salud (des)',\n",
-       "       'Diag 01 Principal (cod+des)', 'Proced 01 Principal (cod+des)',\n",
-       "       '1ra Intervención Fecha', 'Fecha de trasplante', 'Fecha de egreso',\n",
-       "       'Motivo Egreso (Descripción)', 'Egresos', 'Fallecido (Si/No)',\n",
-       "       'Fecha fallecimiento', 'fecha tx', 'año intervencion', 'año tx',\n",
-       "       'tipo'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.columns"
+    "df_sobrevivencia = df[columnas_utiles].copy()\n",
+    "df_sobrevivencia.columns = [\"fecha_trasplante\", \"fecha_muerte\", \"rango_etario\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sobrevivencia[\"fecha_tope\"] = df_sobrevivencia[\"fecha_muerte\"].fillna(fecha_corte)\n",
+    "df_sobrevivencia[\"duracion_anios\"] = (\n",
+    "    df_sobrevivencia[\"fecha_tope\"] - df_sobrevivencia[\"fecha_trasplante\"]\n",
+    ").dt.days / 365\n",
+    "df_sobrevivencia[\"muerto\"] = df_sobrevivencia[\"fecha_muerte\"].notna()"
    ]
   },
   {
@@ -52,192 +90,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columnas_utiles = [\"1ra Intervención Fecha\", \"Fecha fallecimiento\"]\n",
-    "fecha_corte = pd.to_datetime(\"16/08/2023\", dayfirst=True)"
+    "time, survival_prob, conf_init = kaplan_meier_estimator(\n",
+    "    df_sobrevivencia[\"muerto\"], df_sobrevivencia[\"duracion_anios\"], conf_type=\"log-log\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sobrevivencia = df[columnas_utiles].copy()\n",
-    "df_sobrevivencia.columns = [\"fecha_trasplante\", \"fecha_muerte\"]"
+    "# plt.step(time, survival_prob, where=\"post\")\n",
+    "# plt.fill_between(time, conf_init[0], conf_init[1], alpha=0.25, step=\"post\")\n",
+    "# plt.ylim(0, 1)\n",
+    "# plt.ylabel(\"est. probability of survival $\\hat{S}(t)$\")\n",
+    "# plt.xlabel(\"time $t$\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sobrevivencia[\"fecha_tope\"] = df_sobrevivencia[\"fecha_muerte\"].fillna(fecha_corte)\n",
-    "df_sobrevivencia[\"duracion_dias\"] = (\n",
-    "    df_sobrevivencia[\"fecha_tope\"] - df_sobrevivencia[\"fecha_trasplante\"]\n",
-    ").dt.days\n",
-    "df_sobrevivencia[\"muerto\"] = df_sobrevivencia[\"fecha_muerte\"].notna()"
+    "for rango_etario in df_sobrevivencia[\"rango_etario\"].unique():\n",
+    "    df_rango_etario = df_sobrevivencia.query(\"rango_etario == @rango_etario\")\n",
+    "    time, survival_prob, conf_int = kaplan_meier_estimator(df_rango_etario[\"muerto\"], \n",
+    "                                                           df_rango_etario[\"duracion_anios\"], \n",
+    "                                                           conf_type=\"log-log\")\n",
+    "    \n",
+    "#     plt.step(time, survival_prob, where=\"post\", label=f\"{rango_etario} n = {df_rango_etario.shape[0]}\")\n",
+    "#     # plt.fill_between(time, conf_int[0], conf_int[1], alpha=0.25, step=\"post\")\n",
+    "\n",
+    "# plt.ylim(0, 1)\n",
+    "# plt.ylabel(\"est. probability of survival $\\hat{S}(t)$\")\n",
+    "# plt.xlabel(\"time $t$\")\n",
+    "# plt.legend(loc=\"best\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fecha_trasplante</th>\n",
-       "      <th>fecha_muerte</th>\n",
-       "      <th>fecha_tope</th>\n",
-       "      <th>duracion_dias</th>\n",
-       "      <th>muerto</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2011-01-07</td>\n",
-       "      <td>2012-09-14</td>\n",
-       "      <td>2012-09-14</td>\n",
-       "      <td>616</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2011-01-18</td>\n",
-       "      <td>2012-08-02</td>\n",
-       "      <td>2012-08-02</td>\n",
-       "      <td>562</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2011-02-24</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2023-08-16</td>\n",
-       "      <td>4556</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2011-02-24</td>\n",
-       "      <td>2022-10-14</td>\n",
-       "      <td>2022-10-14</td>\n",
-       "      <td>4250</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2011-04-12</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2023-08-16</td>\n",
-       "      <td>4509</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>2011-01-26</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2023-08-16</td>\n",
-       "      <td>4585</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>2011-06-17</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2023-08-16</td>\n",
-       "      <td>4443</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>2011-09-15</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2023-08-16</td>\n",
-       "      <td>4353</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>2012-11-06</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2023-08-16</td>\n",
-       "      <td>3935</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>2012-12-12</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2023-08-16</td>\n",
-       "      <td>3899</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>200 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    fecha_trasplante fecha_muerte fecha_tope  duracion_dias  muerto\n",
-       "0         2011-01-07   2012-09-14 2012-09-14            616    True\n",
-       "1         2011-01-18   2012-08-02 2012-08-02            562    True\n",
-       "2         2011-02-24          NaT 2023-08-16           4556   False\n",
-       "3         2011-02-24   2022-10-14 2022-10-14           4250    True\n",
-       "4         2011-04-12          NaT 2023-08-16           4509   False\n",
-       "..               ...          ...        ...            ...     ...\n",
-       "195       2011-01-26          NaT 2023-08-16           4585   False\n",
-       "196       2011-06-17          NaT 2023-08-16           4443   False\n",
-       "197       2011-09-15          NaT 2023-08-16           4353   False\n",
-       "198       2012-11-06          NaT 2023-08-16           3935   False\n",
-       "199       2012-12-12          NaT 2023-08-16           3899   False\n",
-       "\n",
-       "[200 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_sobrevivencia"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
