--- a/notebooks/1.0-jrb-survival-analysis.ipynb
+++ b/notebooks/1.0-jrb-survival-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,36 @@
     "\n",
     "from src.features.build_features import calcular_kaplan_meier\n",
     "\n",
+    "COLOR_PALETTE = [\n",
+    "    \"#05a298\",\n",
+    "    \"#0070bc\",\n",
+    "    \"#d06b6d\",\n",
+    "    \"#a8e667\",\n",
+    "    \"#57832e\",\n",
+    "    \"#56ebd3\",\n",
+    "    \"#0a4f4e\",\n",
+    "    \"#9ecbf4\",\n",
+    "]\n",
     "\n",
-    "sns.set_style()\n",
+    "REEMPLAZO_NOMBRE_TRASPLANTES = {\n",
+    "    \"33.51 - TRASPLANTE PULMON.UNILATERAL\": \"Trasplante Pulmón Unilateral\",\n",
+    "    \"37.51 - TRASPLANTE CARDIACO\": \"Trasplante Cardiaco\",\n",
+    "    \"33.52 - TRASPLANTE PULMON.BILATERAL\": \"Trasplante Pulmón Bilateral\",\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def find_nearest_index(df, column_name, target_value):\n",
+    "    # Calculate the absolute difference\n",
+    "    df[\"abs_diff\"] = abs(df[column_name] - target_value)\n",
+    "\n",
+    "    # Find the index of the row with the minimum absolute difference\n",
+    "    nearest_index = df[\"abs_diff\"].idxmin()\n",
+    "\n",
+    "    return nearest_index\n",
+    "\n",
+    "\n",
+    "sns.set_style(\"ticks\")\n",
+    "sns.set_palette(COLOR_PALETTE)\n",
     "plt.rcParams[\"figure.figsize\"] = (12, 6)"
    ]
   },
@@ -68,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,17 +136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_sobrevivencia = df[RENAME_COLUMNAS.keys()]\n",
-    "df_sobrevivencia = df_sobrevivencia.rename(columns=RENAME_COLUMNAS)"
+    "df_sobrevivencia = df_sobrevivencia.rename(columns=RENAME_COLUMNAS)\n",
+    "df_sobrevivencia[\"tipo_trasplante\"] = df_sobrevivencia[\"tipo_trasplante\"].replace(\n",
+    "    REEMPLAZO_NOMBRE_TRASPLANTES\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +189,7 @@
        "      <td>2011-01-07</td>\n",
        "      <td>2012-09-14</td>\n",
        "      <td>(50, 60]</td>\n",
-       "      <td>33.51 - TRASPLANTE PULMON.UNILATERAL</td>\n",
+       "      <td>Trasplante Pulmón Unilateral</td>\n",
        "      <td>J84.1 - Otras enfermedades pulmonares intersti...</td>\n",
        "      <td>2012-09-14</td>\n",
        "      <td>1.687671</td>\n",
@@ -169,7 +200,7 @@
        "      <td>2011-01-18</td>\n",
        "      <td>2012-08-02</td>\n",
        "      <td>(50, 60]</td>\n",
-       "      <td>33.51 - TRASPLANTE PULMON.UNILATERAL</td>\n",
+       "      <td>Trasplante Pulmón Unilateral</td>\n",
        "      <td>J84.1 - Otras enfermedades pulmonares intersti...</td>\n",
        "      <td>2012-08-02</td>\n",
        "      <td>1.539726</td>\n",
@@ -180,7 +211,7 @@
        "      <td>2011-02-24</td>\n",
        "      <td>NaT</td>\n",
        "      <td>(50, 60]</td>\n",
-       "      <td>37.51 - TRASPLANTE CARDIACO</td>\n",
+       "      <td>Trasplante Cardiaco</td>\n",
        "      <td>I42.0 - Cardiomiopatía dilatada</td>\n",
        "      <td>2023-08-16</td>\n",
        "      <td>12.482192</td>\n",
@@ -191,7 +222,7 @@
        "      <td>2011-02-24</td>\n",
        "      <td>2022-10-14</td>\n",
        "      <td>(40, 50]</td>\n",
-       "      <td>33.51 - TRASPLANTE PULMON.UNILATERAL</td>\n",
+       "      <td>Trasplante Pulmón Unilateral</td>\n",
        "      <td>J84.1 - Otras enfermedades pulmonares intersti...</td>\n",
        "      <td>2022-10-14</td>\n",
        "      <td>11.643836</td>\n",
@@ -202,7 +233,7 @@
        "      <td>2011-04-12</td>\n",
        "      <td>NaT</td>\n",
        "      <td>(50, 60]</td>\n",
-       "      <td>33.51 - TRASPLANTE PULMON.UNILATERAL</td>\n",
+       "      <td>Trasplante Pulmón Unilateral</td>\n",
        "      <td>J84.1 - Otras enfermedades pulmonares intersti...</td>\n",
        "      <td>2023-08-16</td>\n",
        "      <td>12.353425</td>\n",
@@ -213,19 +244,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  fecha_trasplante fecha_muerte rango_etario  \\\n",
-       "0       2011-01-07   2012-09-14     (50, 60]   \n",
-       "1       2011-01-18   2012-08-02     (50, 60]   \n",
-       "2       2011-02-24          NaT     (50, 60]   \n",
-       "3       2011-02-24   2022-10-14     (40, 50]   \n",
-       "4       2011-04-12          NaT     (50, 60]   \n",
-       "\n",
-       "                        tipo_trasplante  \\\n",
-       "0  33.51 - TRASPLANTE PULMON.UNILATERAL   \n",
-       "1  33.51 - TRASPLANTE PULMON.UNILATERAL   \n",
-       "2           37.51 - TRASPLANTE CARDIACO   \n",
-       "3  33.51 - TRASPLANTE PULMON.UNILATERAL   \n",
-       "4  33.51 - TRASPLANTE PULMON.UNILATERAL   \n",
+       "  fecha_trasplante fecha_muerte rango_etario               tipo_trasplante  \\\n",
+       "0       2011-01-07   2012-09-14     (50, 60]  Trasplante Pulmón Unilateral   \n",
+       "1       2011-01-18   2012-08-02     (50, 60]  Trasplante Pulmón Unilateral   \n",
+       "2       2011-02-24          NaT     (50, 60]           Trasplante Cardiaco   \n",
+       "3       2011-02-24   2022-10-14     (40, 50]  Trasplante Pulmón Unilateral   \n",
+       "4       2011-04-12          NaT     (50, 60]  Trasplante Pulmón Unilateral   \n",
        "\n",
        "                                         diagnostico fecha_tope  \\\n",
        "0  J84.1 - Otras enfermedades pulmonares intersti... 2012-09-14   \n",
@@ -247,18 +271,24 @@
     }
    ],
    "source": [
-    "display(df_sobrevivencia.head())"
+    "display(df_sobrevivencia.head(2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for tipo_trasplante in df_sobrevivencia[\"tipo_trasplante\"].unique():\n",
-    "    df_trasplante = df_sobrevivencia.query(\"tipo_trasplante == @tipo_trasplante\")\n",
-    "    resultado_kaplan = calcular_kaplan_meier(df_trasplante, \"duracion_anios\", \"muerto\")\n",
+    "SOBREVIDAS_A_ANALIZAR = [5, 10, 12]\n",
+    "MARGEN_TEXTO_ARRIBA = 0.012\n",
+    "MARGEN_TEXTO_DERECHA = 0.15\n",
+    "\n",
+    "# fig, axis = plt.subplots(1, 1, figsize=(12, 6))\n",
+    "# for tipo_trasplante in sorted(df_sobrevivencia[\"tipo_trasplante\"].unique()):\n",
+    "#     df_trasplante = df_sobrevivencia.query(\"tipo_trasplante == @tipo_trasplante\")\n",
+    "#     resultado_kaplan = calcular_kaplan_meier(df_trasplante, \"duracion_anios\", \"muerto\")\n",
+    "\n",
     "#     sns.lineplot(\n",
     "#         resultado_kaplan,\n",
     "#         x=\"tiempo\",\n",
@@ -269,13 +299,39 @@
     "#         resultado_kaplan[\"tiempo\"],\n",
     "#         resultado_kaplan[\"limite_confianza_bajo\"],\n",
     "#         resultado_kaplan[\"limite_confianza_alto\"],\n",
-    "#         alpha=0.05\n",
+    "#         alpha=0.05,\n",
     "#     )\n",
-    "#     sns.scatterplot(x=10, y=)\n",
     "\n",
-    "# plt.axvline(10, linestyle=\"--\", color=\"black\")\n",
+    "#     for sobrevida in SOBREVIDAS_A_ANALIZAR:\n",
+    "#         duracion_a_sobrevida_anios = find_nearest_index(resultado_kaplan, \"tiempo\", sobrevida)\n",
+    "#         probabilidad_a_sobrevida_anios = resultado_kaplan.iloc[duracion_a_sobrevida_anios, 1]\n",
+    "#         plt.plot(sobrevida, probabilidad_a_sobrevida_anios, color=\"black\", marker=\"o\", markersize=3)\n",
+    "#         plt.text(\n",
+    "#             sobrevida + MARGEN_TEXTO_DERECHA,\n",
+    "#             probabilidad_a_sobrevida_anios + MARGEN_TEXTO_ARRIBA,\n",
+    "#             f\"{(probabilidad_a_sobrevida_anios * 100):.1f}%\",\n",
+    "#             fontsize=12,\n",
+    "#         )\n",
+    "\n",
+    "\n",
+    "# # for sobrevida in SOBREVIDAS_A_ANALIZAR:\n",
+    "# #     plt.axvline(sobrevida, color=\"gray\", linewidth=1, linestyle=\"--\")\n",
+    "\n",
     "# plt.ylim(0, 1)\n",
+    "# plt.xlim(left=0)\n",
+    "# plt.title(\"Sobrevida a Largo Plazo en Trasplantes Cardíacos y de Pulmón Unilateral/Bilateral\")\n",
+    "# plt.xlabel(\"Tiempo (Años)\")\n",
+    "# plt.ylabel(\"Sobrevivencia (%)\")\n",
     "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set_style()"
    ]
   }
  ],
