Termina figura de sobrevida

--- a/notebooks/1.0-jrb-survival-analysis.ipynb
+++ b/notebooks/1.0-jrb-survival-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -206,39 +206,6 @@
        "      <td>1.539726</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2011-02-24</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>(50, 60]</td>\n",
-       "      <td>Trasplante Cardiaco</td>\n",
-       "      <td>I42.0 - Cardiomiopatía dilatada</td>\n",
-       "      <td>2023-08-16</td>\n",
-       "      <td>12.482192</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2011-02-24</td>\n",
-       "      <td>2022-10-14</td>\n",
-       "      <td>(40, 50]</td>\n",
-       "      <td>Trasplante Pulmón Unilateral</td>\n",
-       "      <td>J84.1 - Otras enfermedades pulmonares intersti...</td>\n",
-       "      <td>2022-10-14</td>\n",
-       "      <td>11.643836</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2011-04-12</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>(50, 60]</td>\n",
-       "      <td>Trasplante Pulmón Unilateral</td>\n",
-       "      <td>J84.1 - Otras enfermedades pulmonares intersti...</td>\n",
-       "      <td>2023-08-16</td>\n",
-       "      <td>12.353425</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -247,23 +214,14 @@
        "  fecha_trasplante fecha_muerte rango_etario               tipo_trasplante  \\\n",
        "0       2011-01-07   2012-09-14     (50, 60]  Trasplante Pulmón Unilateral   \n",
        "1       2011-01-18   2012-08-02     (50, 60]  Trasplante Pulmón Unilateral   \n",
-       "2       2011-02-24          NaT     (50, 60]           Trasplante Cardiaco   \n",
-       "3       2011-02-24   2022-10-14     (40, 50]  Trasplante Pulmón Unilateral   \n",
-       "4       2011-04-12          NaT     (50, 60]  Trasplante Pulmón Unilateral   \n",
        "\n",
        "                                         diagnostico fecha_tope  \\\n",
        "0  J84.1 - Otras enfermedades pulmonares intersti... 2012-09-14   \n",
        "1  J84.1 - Otras enfermedades pulmonares intersti... 2012-08-02   \n",
-       "2                    I42.0 - Cardiomiopatía dilatada 2023-08-16   \n",
-       "3  J84.1 - Otras enfermedades pulmonares intersti... 2022-10-14   \n",
-       "4  J84.1 - Otras enfermedades pulmonares intersti... 2023-08-16   \n",
        "\n",
        "   duracion_anios  muerto  \n",
        "0        1.687671    True  \n",
-       "1        1.539726    True  \n",
-       "2       12.482192   False  \n",
-       "3       11.643836    True  \n",
-       "4       12.353425   False  "
+       "1        1.539726    True  "
       ]
      },
      "metadata": {},
@@ -276,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,6 +245,7 @@
     "# fig, axis = plt.subplots(1, 1, figsize=(12, 6))\n",
     "# for tipo_trasplante in sorted(df_sobrevivencia[\"tipo_trasplante\"].unique()):\n",
     "#     df_trasplante = df_sobrevivencia.query(\"tipo_trasplante == @tipo_trasplante\")\n",
+    "\n",
     "#     resultado_kaplan = calcular_kaplan_meier(df_trasplante, \"duracion_anios\", \"muerto\")\n",
     "\n",
     "#     sns.lineplot(\n",
@@ -309,7 +268,7 @@
     "#         plt.text(\n",
     "#             sobrevida + MARGEN_TEXTO_DERECHA,\n",
     "#             probabilidad_a_sobrevida_anios + MARGEN_TEXTO_ARRIBA,\n",
-    "#             f\"{(probabilidad_a_sobrevida_anios * 100):.1f}%\",\n",
+    "#             f\"{probabilidad_a_sobrevida_anios:.1f}%\",\n",
     "#             fontsize=12,\n",
     "#         )\n",
     "\n",
@@ -317,21 +276,15 @@
     "# # for sobrevida in SOBREVIDAS_A_ANALIZAR:\n",
     "# #     plt.axvline(sobrevida, color=\"gray\", linewidth=1, linestyle=\"--\")\n",
     "\n",
-    "# plt.ylim(0, 1)\n",
+    "# plt.ylim(0, 100)\n",
     "# plt.xlim(left=0)\n",
     "# plt.title(\"Sobrevida a Largo Plazo en Trasplantes Cardíacos y de Pulmón Unilateral/Bilateral\")\n",
     "# plt.xlabel(\"Tiempo (Años)\")\n",
     "# plt.ylabel(\"Sobrevivencia (%)\")\n",
+    "# plt.legend(loc=\"lower left\")\n",
+    "# plt.tight_layout()\n",
+    "# fig.savefig(\"../reports/figures/sobrevida_trasplantes.png\", dpi=700)\n",
     "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.set_style()"
    ]
   }
  ],
