Muestra resultado Kaplan

--- a/notebooks/1.0-jrb-survival-analysis.ipynb
+++ b/notebooks/1.0-jrb-survival-analysis.ipynb
@@ -166,43 +166,43 @@
     "\n",
     "    resultado_kaplan = calcular_kaplan_meier(df_trasplante, \"duracion_anios\", \"muerto\")\n",
     "\n",
-    "#     sns.lineplot(\n",
-    "#         resultado_kaplan,\n",
-    "#         x=\"tiempo\",\n",
-    "#         y=\"probabilidad_sobrevivencia\",\n",
-    "#         label=f\"{tipo_trasplante} - n = {df_trasplante.shape[0]}\",\n",
-    "#     )\n",
-    "#     plt.fill_between(\n",
-    "#         resultado_kaplan[\"tiempo\"],\n",
-    "#         resultado_kaplan[\"limite_confianza_bajo\"],\n",
-    "#         resultado_kaplan[\"limite_confianza_alto\"],\n",
-    "#         alpha=0.05,\n",
-    "#     )\n",
+    "    sns.lineplot(\n",
+    "        resultado_kaplan,\n",
+    "        x=\"tiempo\",\n",
+    "        y=\"probabilidad_sobrevivencia\",\n",
+    "        label=f\"{tipo_trasplante} - n = {df_trasplante.shape[0]}\",\n",
+    "    )\n",
+    "    plt.fill_between(\n",
+    "        resultado_kaplan[\"tiempo\"],\n",
+    "        resultado_kaplan[\"limite_confianza_bajo\"],\n",
+    "        resultado_kaplan[\"limite_confianza_alto\"],\n",
+    "        alpha=0.05,\n",
+    "    )\n",
     "\n",
-    "#     for sobrevida in SOBREVIDAS_A_ANALIZAR:\n",
-    "#         duracion_a_sobrevida_anios = find_nearest_index(resultado_kaplan, \"tiempo\", sobrevida)\n",
-    "#         probabilidad_a_sobrevida_anios = resultado_kaplan.iloc[duracion_a_sobrevida_anios, 1]\n",
-    "#         plt.plot(sobrevida, probabilidad_a_sobrevida_anios, color=\"black\", marker=\"o\", markersize=3)\n",
-    "#         plt.text(\n",
-    "#             sobrevida + MARGEN_TEXTO_DERECHA,\n",
-    "#             probabilidad_a_sobrevida_anios + MARGEN_TEXTO_ARRIBA,\n",
-    "#             f\"{probabilidad_a_sobrevida_anios:.1f}%\",\n",
-    "#             fontsize=12,\n",
-    "#         )\n",
+    "    for sobrevida in SOBREVIDAS_A_ANALIZAR:\n",
+    "        duracion_a_sobrevida_anios = find_nearest_index(resultado_kaplan, \"tiempo\", sobrevida)\n",
+    "        probabilidad_a_sobrevida_anios = resultado_kaplan.iloc[duracion_a_sobrevida_anios, 1]\n",
+    "        plt.plot(sobrevida, probabilidad_a_sobrevida_anios, color=\"black\", marker=\"o\", markersize=3)\n",
+    "        plt.text(\n",
+    "            sobrevida + MARGEN_TEXTO_DERECHA,\n",
+    "            probabilidad_a_sobrevida_anios + MARGEN_TEXTO_ARRIBA,\n",
+    "            f\"{probabilidad_a_sobrevida_anios:.1f}%\",\n",
+    "            fontsize=12,\n",
+    "        )\n",
     "\n",
     "\n",
-    "# # for sobrevida in SOBREVIDAS_A_ANALIZAR:\n",
-    "# #     plt.axvline(sobrevida, color=\"gray\", linewidth=1, linestyle=\"--\")\n",
+    "# for sobrevida in SOBREVIDAS_A_ANALIZAR:\n",
+    "#     plt.axvline(sobrevida, color=\"gray\", linewidth=1, linestyle=\"--\")\n",
     "\n",
-    "# plt.ylim(0, 100)\n",
-    "# plt.xlim(left=0)\n",
-    "# plt.title(\"Sobrevida a Largo Plazo en Trasplantes Cardíacos y de Pulmón Unilateral/Bilateral\")\n",
-    "# plt.xlabel(\"Tiempo (Años)\")\n",
-    "# plt.ylabel(\"Sobrevivencia (%)\")\n",
-    "# plt.legend(loc=\"lower left\")\n",
-    "# plt.tight_layout()\n",
-    "# fig.savefig(\"../reports/figures/sobrevida_trasplantes.png\", dpi=700)\n",
-    "# plt.show()"
+    "plt.ylim(0, 100)\n",
+    "plt.xlim(left=0)\n",
+    "plt.title(\"Sobrevida a Largo Plazo en Trasplantes Cardíacos y de Pulmón Unilateral/Bilateral\")\n",
+    "plt.xlabel(\"Tiempo (Años)\")\n",
+    "plt.ylabel(\"Sobrevivencia (%)\")\n",
+    "plt.legend(loc=\"lower left\")\n",
+    "plt.tight_layout()\n",
+    "fig.savefig(\"../reports/figures/sobrevida_trasplantes.png\", dpi=700)\n",
+    "plt.show()"
    ]
   },
   {
